fixed z-index

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -6,7 +6,7 @@
 $toolbar-height: 36px;
 $toolbar-bg: #116fff;
 $toolbar-color: #ffffff;
-$toolbar-z: 9999; // above Shopware modals (1050) and offcanvas nav (1100)
+$toolbar-z: 1045; // above Shopware modals (1050) and offcanvas nav (1100)
 $toggle-width: 36px; // collapse button and bubble are identical in size
 $mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', monospace;
 
